Fix scrollbar position on IE8-9

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -658,6 +658,7 @@ table td,table th{
 .toc div{
 	overflow-y:auto;
 	overflow-x:hidden;
+	width:240px;
 }
 .toc div.scroll{
 	position:fixed;
@@ -671,7 +672,7 @@ table td,table th{
 .toc ul{
 	width:220px;
 	border-right:1px solid #e0e0e0;
-	padding:0 20px 0 0;
+	padding:0 19px 0 0;
 }
 .toc ul li ul{
 	position:relative;
